# plan_mcp_service

./: .gitignore  DEPLOYMENT.md  LICENSE  MANIFEST.in  MCP_SO_SUBMISSION.md  PUBLISH.md  README.md  USAGE.md  db.py  main.py  package.json  plan.md  plans.db  publish.sh  pyproject.toml  quick_submit_template.md  setup.py  submit_to_mcpso.sh  test_db.py  test_mcp.py  test_mcp_client.py
.codebuddy/rules/: mcp.mdc
.github/workflows/: publish.yml
src/plan_mcp_service/: __init__.py  db.py  server.py
